Overall code readequations to pair with most recent Qwadro API specifications. Last fixes in remaining old code domain prefixes. Added support for RGBA formats: 16-bit signed/unsigned int, 32-bit signed/unsigned int, 32-bit float vectors. Mainly because tensor buffers forced the code to used avxFormat uniformly; purging the workaround afxVertexFormat. There were some changes in color blending code, but I could not test it. The dependent project did not work as expected. On next publication of Qwadro API state, most of changes here will be explained.

--- a/_vs17/tarzgl4/tarzgl4.vcxproj
+++ b/_vs17/tarzgl4/tarzgl4.vcxproj
@@ -161,7 +161,7 @@
     <ClInclude Include="..\..\src\zglObjects.h" />
     <ClInclude Include="..\..\src\zglUtils.h" />
     <ClInclude Include="..\..\src\zglDefs.h" />
-    <ClInclude Include="..\..\src\zglInterop_WGL32.h" />
+    <ClInclude Include="..\..\src\zglInterop_WGL.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -172,27 +172,22 @@
     <ClCompile Include="..\..\src\zglInterop_D3D.c" />
     <ClCompile Include="..\..\src\zglLigature.c" />
     <ClCompile Include="..\..\src\zglBuffer.c" />
-    <ClCompile Include="..\..\src\zglBufferOps.c" />
     <ClCompile Include="..\..\src\zglCanvas.c" />
-    <ClCompile Include="..\..\src\zglCommandEncoder.c" />
-    <ClCompile Include="..\..\src\zglDrawContext.c" />
+    <ClCompile Include="..\..\src\zglDrawSystem_W32.c" />
     <ClCompile Include="..\..\src\zglDrawDevice_W32.c" />
-    <ClCompile Include="..\..\src\zglDrawInput.c" />
-    <ClCompile Include="..\..\src\zglDrawOutput_GDI32.c" />
-    <ClCompile Include="..\..\src\zglDrawBridge.c" />
-    <ClCompile Include="..\..\src\zglCommandBuffer.c" />
+    <ClCompile Include="..\..\src\zglDrawOutput_GDI.c" />
+    <ClCompile Include="..\..\src\zglDrawBridge_W32.c" />
     <ClCompile Include="..\..\src\zglFence.c" />
-    <ClCompile Include="..\..\src\zglInterop_WGL32.c" />
+    <ClCompile Include="..\..\src\zglInterop_WGL.c" />
     <ClCompile Include="..\..\src\zglPipeline.c" />
     <ClCompile Include="..\..\src\zglQueryPool.c" />
     <ClCompile Include="..\..\src\zglUtils.c" />
     <ClCompile Include="..\..\src\zglRaster.c" />
-    <ClCompile Include="..\..\src\zglRasterOps.c" />
     <ClCompile Include="..\..\src\zglRasterizationOps.c" />
     <ClCompile Include="..\..\src\zglSampler.c" />
     <ClCompile Include="..\..\src\zglShader.c" />
     <ClCompile Include="..\..\src\zglTransformationOps.c" />
-    <ClCompile Include="..\..\src\zglVertexInput.c" />
+    <ClCompile Include="..\..\src\zglVertexDecl.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\src\zglWrapper.inl" />
