--- a/_vs17/e2tarzgl4/e2tarzgl4.vcxproj.filters
+++ b/_vs17/e2tarzgl4/e2tarzgl4.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="_nfo">
-      <UniqueIdentifier>{c80c1acf-b0e0-4300-8e08-8cb7c2a12fad}</UniqueIdentifier>
-    </Filter>
     <Filter Include="e2tarzgl4">
       <UniqueIdentifier>{39674572-e32c-4d83-adef-0eb216f358df}</UniqueIdentifier>
     </Filter>
@@ -19,10 +16,13 @@
     <Filter Include="e2tarzgl4\pipe">
       <UniqueIdentifier>{560d3144-3cc7-4acf-8a6f-867757ca4606}</UniqueIdentifier>
     </Filter>
+    <Filter Include="_dll">
+      <UniqueIdentifier>{c80c1acf-b0e0-4300-8e08-8cb7c2a12fad}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
-      <Filter>_nfo</Filter>
+      <Filter>_dll</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\zglDefs.h">
       <Filter>e2tarzgl4</Filter>
@@ -107,7 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="e2tarzgl4.rc">
-      <Filter>_nfo</Filter>
+      <Filter>_dll</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
